nwrfcsdk/include/sapnwrfc.h

  typedef          long RFC_INT8;   
  typedef          long long RFC_INT8;
  typedef          __int64 RFC_INT8;
typedef SAP_UC         RFC_CHAR;     
typedef RFC_CHAR       RFC_NUM;      
typedef SAP_RAW        RFC_BYTE;     
typedef int			   RFC_INT;		 
typedef double         RFC_FLOAT;    
typedef enum _RFCTYPE
{
	RFCTYPE_CHAR   = 0,		
	RFCTYPE_DATE   = 1,		
	RFCTYPE_BCD    = 2,		
	RFCTYPE_TIME   = 3,		
	RFCTYPE_BYTE   = 4,		
	RFCTYPE_TABLE   = 5,	
	RFCTYPE_NUM    = 6,		
	RFCTYPE_FLOAT  = 7,		
	RFCTYPE_INT    = 8,		
	RFCTYPE_INT2   = 9,		
	RFCTYPE_INT1   = 10,	
	RFCTYPE_NULL  = 14,		
	RFCTYPE_ABAPOBJECT = 16,
	RFCTYPE_STRUCTURE = 17,	
	RFCTYPE_DECF16  = 23,	
	RFCTYPE_DECF34  = 24,	
	RFCTYPE_XMLDATA = 28,	
	RFCTYPE_STRING = 29,	
	RFCTYPE_XSTRING = 30,	
	RFCTYPE_INT8,			
	RFCTYPE_UTCLONG ,		
	RFCTYPE_UTCSECOND ,		
	RFCTYPE_UTCMINUTE ,		
	RFCTYPE_DTDAY ,			
	RFCTYPE_DTWEEK   ,		
	RFCTYPE_DTMONTH  ,		
	RFCTYPE_TSECOND  ,		
	RFCTYPE_TMINUTE  ,		
	RFCTYPE_CDAY  ,			
	RFCTYPE_BOX  ,			
	RFCTYPE_GENERIC_BOX,	
	_RFCTYPE_max_value		
}RFCTYPE;
typedef enum _RFC_RC
{
    RFC_OK,						
    RFC_COMMUNICATION_FAILURE,	
    RFC_LOGON_FAILURE,			
    RFC_ABAP_RUNTIME_FAILURE,	
    RFC_ABAP_MESSAGE,			
    RFC_ABAP_EXCEPTION,			
    RFC_CLOSED,					
    RFC_CANCELED,				
    RFC_TIMEOUT,				
    RFC_MEMORY_INSUFFICIENT,	
    RFC_VERSION_MISMATCH,		
    RFC_INVALID_PROTOCOL,		
    RFC_SERIALIZATION_FAILURE,	
    RFC_INVALID_HANDLE,			
    RFC_RETRY,					
    RFC_EXTERNAL_FAILURE,		
    RFC_EXECUTED,				
    RFC_NOT_FOUND,				
    RFC_NOT_SUPPORTED,			
    RFC_ILLEGAL_STATE,			
    RFC_INVALID_PARAMETER,		
    RFC_CODEPAGE_CONVERSION_FAILURE, 
    RFC_CONVERSION_FAILURE,		
    RFC_BUFFER_TOO_SMALL,		
    RFC_TABLE_MOVE_BOF,			
    RFC_TABLE_MOVE_EOF,			
    RFC_START_SAPGUI_FAILURE,   
    RFC_ABAP_CLASS_EXCEPTION,   
	RFC_UNKNOWN_ERROR,			
	RFC_AUTHORIZATION_FAILURE,	
    RFC_AUTHENTICATION_FAILURE,	
	RFC_CRYPTOLIB_FAILURE,	    
	RFC_IO_FAILURE,				
	RFC_LOCKING_FAILURE,	    
	_RFC_RC_max_value			
}RFC_RC;
typedef enum _RFC_ERROR_GROUP
{
    OK,								
	ABAP_APPLICATION_FAILURE,		
	ABAP_RUNTIME_FAILURE,			
    LOGON_FAILURE,					
	COMMUNICATION_FAILURE,			
	EXTERNAL_RUNTIME_FAILURE,		
	EXTERNAL_APPLICATION_FAILURE,	
	EXTERNAL_AUTHORIZATION_FAILURE,	
    EXTERNAL_AUTHENTICATION_FAILURE,
	CRYPTOLIB_FAILURE,              
	LOCKING_FAILURE	                
}RFC_ERROR_GROUP;
typedef struct _RFC_ERROR_INFO
{
    RFC_RC code;					
    RFC_ERROR_GROUP group;          
    SAP_UC key[128];				
    SAP_UC message[512];			
    SAP_UC abapMsgClass[20+1];		
    SAP_UC abapMsgType[1+1];		
    RFC_NUM abapMsgNumber[3 + 1];	
    SAP_UC abapMsgV1[50+1];			
    SAP_UC abapMsgV2[50+1];			
    SAP_UC abapMsgV3[50+1];			
    SAP_UC abapMsgV4[50+1];			
}RFC_ERROR_INFO;
typedef RFC_CHAR RFC_ABAP_NAME[30+1];			
typedef RFC_CHAR RFC_PARAMETER_DEFVALUE[30+1];	
typedef RFC_CHAR RFC_PARAMETER_TEXT[79+1];		
typedef struct _RFC_TYPE_DESC_HANDLE {void* handle;} *RFC_TYPE_DESC_HANDLE;
typedef struct _RFC_FUNCTION_DESC_HANDLE {void* handle;} *RFC_FUNCTION_DESC_HANDLE;
typedef struct RFC_DATA_CONTAINER {void* handle;} *DATA_CONTAINER_HANDLE;
typedef DATA_CONTAINER_HANDLE RFC_STRUCTURE_HANDLE;
typedef DATA_CONTAINER_HANDLE RFC_FUNCTION_HANDLE;
typedef DATA_CONTAINER_HANDLE RFC_TABLE_HANDLE;
typedef struct _RFC_CONNECTION_HANDLE {void* handle;} *RFC_CONNECTION_HANDLE;
typedef struct _RFC_CONNECTION_PARAMETER
{
    const SAP_UC * name;	
    const SAP_UC * value;	
}RFC_CONNECTION_PARAMETER,*P_RFC_CONNECTION_PARAMETER;
typedef struct _RFC_FIELD_DESC
{
	RFC_ABAP_NAME	name;		
	RFCTYPE		type;			
	unsigned	nucLength;		
	unsigned	nucOffset;		
	unsigned	ucLength;		
	unsigned	ucOffset;		
	unsigned    decimals;		
	RFC_TYPE_DESC_HANDLE typeDescHandle; 
	void* extendedDescription;	
}RFC_FIELD_DESC,*P_RFC_FIELD_DESC;
typedef enum _RFC_DIRECTION
{
	RFC_IMPORT   = 0x01,					
	RFC_EXPORT   = 0x02,					
	RFC_CHANGING = RFC_IMPORT | RFC_EXPORT,	
	RFC_TABLES    = 0x04 | RFC_CHANGING		
}RFC_DIRECTION;
typedef struct _RFC_PARAMETER_DESC
{
	RFC_ABAP_NAME	name;		
	RFCTYPE		type;			
	RFC_DIRECTION direction;	
	unsigned	nucLength;		
	unsigned	ucLength;		
	unsigned    decimals;		
	RFC_TYPE_DESC_HANDLE typeDescHandle;	
	RFC_PARAMETER_DEFVALUE defaultValue;	
	RFC_PARAMETER_TEXT parameterText;		
	RFC_BYTE     optional;		
	void* extendedDescription;	
}RFC_PARAMETER_DESC,*P_RFC_PARAMETER_DESC;
	typedef RFC_RC (SAP_API* RFC_SERVER_FUNCTION)(RFC_CONNECTION_HANDLE rfcHandle, RFC_FUNCTION_HANDLE funcHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_CONNECTION_HANDLE SAP_API RfcOpenConnection(RFC_CONNECTION_PARAMETER const * connectionParams, unsigned paramCount, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_CONNECTION_HANDLE SAP_API RfcRegisterServer(RFC_CONNECTION_PARAMETER const * connectionParams, unsigned paramCount, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcCloseConnection(RFC_CONNECTION_HANDLE rfcHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcListenAndDispatch (RFC_CONNECTION_HANDLE rfcHandle, int timeout, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcInvoke(RFC_CONNECTION_HANDLE rfcHandle, RFC_FUNCTION_HANDLE funcHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcInstallServerFunction(SAP_UC const *sysId, RFC_FUNCTION_DESC_HANDLE funcDescHandle, RFC_SERVER_FUNCTION serverFunction, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_FUNCTION_HANDLE SAP_API RfcCreateFunction(RFC_FUNCTION_DESC_HANDLE funcDescHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcDestroyFunction(RFC_FUNCTION_HANDLE funcHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_STRUCTURE_HANDLE SAP_API RfcGetCurrentRow(RFC_TABLE_HANDLE tableHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_STRUCTURE_HANDLE SAP_API RfcAppendNewRow(RFC_TABLE_HANDLE tableHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcMoveTo(RFC_TABLE_HANDLE tableHandle, unsigned index, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetRowCount(RFC_TABLE_HANDLE tableHandle, unsigned* rowCount, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetString(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, SAP_UC *stringBuffer, unsigned bufferLength, unsigned* stringLength, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetXString(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, SAP_RAW *byteBuffer, unsigned bufferLength, unsigned* xstringLength, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetInt(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, RFC_INT  *value, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetInt8(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, RFC_INT8* value, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetFloat(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, RFC_FLOAT *value, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetStructure(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, RFC_STRUCTURE_HANDLE* structHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetTable(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, RFC_TABLE_HANDLE* tableHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcSetString(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, const SAP_UC *stringValue, unsigned valueLength, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcSetXString(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, const SAP_RAW *byteValue, unsigned valueLength, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcSetInt(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, const RFC_INT  value, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcSetInt8(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, const RFC_INT8 value, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcSetFloat(DATA_CONTAINER_HANDLE dataHandle, SAP_UC const* name, const RFC_FLOAT value, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_FUNCTION_DESC_HANDLE SAP_API RfcDescribeFunction(RFC_FUNCTION_HANDLE funcHandle, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_FUNCTION_DESC_HANDLE SAP_API RfcGetFunctionDesc(RFC_CONNECTION_HANDLE rfcHandle, SAP_UC const * funcName, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_TYPE_DESC_HANDLE SAP_API RfcGetTypeDesc(RFC_CONNECTION_HANDLE rfcHandle, SAP_UC const * typeName, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcGetFieldCount(RFC_TYPE_DESC_HANDLE typeHandle, unsigned* count, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_RC SAP_API RfcGetFieldDescByIndex(RFC_TYPE_DESC_HANDLE typeHandle, unsigned index, RFC_FIELD_DESC* fieldDescr, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_FUNCTION_DESC_HANDLE SAP_API RfcCreateFunctionDesc(SAP_UC const* name, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_RC SAP_API RfcGetFunctionName(RFC_FUNCTION_DESC_HANDLE funcDesc, RFC_ABAP_NAME bufferForName, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_RC SAP_API RfcAddParameter(RFC_FUNCTION_DESC_HANDLE funcDesc, const RFC_PARAMETER_DESC* paramDescr, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_RC SAP_API RfcGetParameterCount(RFC_FUNCTION_DESC_HANDLE funcDesc, unsigned* count, RFC_ERROR_INFO* errorInfo);
    DECL_EXP RFC_RC SAP_API RfcGetParameterDescByIndex(RFC_FUNCTION_DESC_HANDLE funcDesc, unsigned index, RFC_PARAMETER_DESC* paramDesc, RFC_ERROR_INFO* errorInfo);
	DECL_EXP RFC_RC SAP_API RfcDestroyFunctionDesc(RFC_FUNCTION_DESC_HANDLE funcDesc, RFC_ERROR_INFO *errorInfo);